--- a/templates/index.html
+++ b/templates/index.html
@@ -4,48 +4,61 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Fake News Prediction</title>
+	<title>Fake News Predictor</title>
+	<link href="favicon.ico" rel="icon" type="image/x-icon" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
 		crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,700;1,100&display=swap"
+		rel="stylesheet">
 
 </head>
 
-<body>
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<div class="container-fluid">
-			<a class="navbar-brand" href="/">FAKE NEWS PREDICTION</a>
+<body style="font-family: 'Roboto', sans-serif;">
+	<nav class="navbar navbar-expand-lg navbar-light bg-dark text-center ">
+		<div class=" container-fluid ">
+			<a class=" navbar-brand " href=" /">
+				<h2 class=" " style="font-weight: 700; color: #fff;">FAKE NEWS PREDICTION</h2>
+			</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
 				aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
-			<!-- <div class="nav navbar-nav navbar-right" id="navbarNavAltMarkup">
-				<div class="navbar-nav">
-					<a class="nav-link" target="_blank"
-						href="https://rapidapi.com/fangyiyu/api/fake-news-detection1/">API</a>
-					<a class="nav-link" target="_blank"
-						href="https://medium.com/@fangyiyu/how-to-build-a-fake-news-detection-web-app-using-flask-c0cfd1d9c2d4?sk=2a752b0d87c759672664232b33543667/">Blog</a>
-					<a class="nav-link" target="_blank"
-						href="https://github.com/fangyiyu/Fake_News_Detection_Flask/blob/main/Fake_news_detection.ipynb">NoteBook</a>
-					<a class="nav-link" target="_blank" href="https://github.com/fangyiyu/Fake_News_Detection_Flask">Code Source</a>
-				</div> -->
+			<div class="nav navbar-nav navbar-right" id="navbarNavAltMarkup">
+				<div class="navbar-nav ">
+					<a class="nav-link" target="_blank " style="color: #fff;"
+						href="https://github.com/super1-1star">About</ a>
+
+						<a class="nav-link" target="_blank" style="color: #fff;"
+							href="https://github.com/super1-1star">Github</a>
+				</div>
+			</div>
 		</div>
-		</div>
+
+
 	</nav>
 
 
 	<br>
-	<p style=text-align:center>A fake news prediction web application using ML </p>
-	<p style=text-align:center>Enter your text to try it.</p>
+	<div class="w-50 m-auto">
+		<p style="text-align:center;font-weight:bold;">It is a fake news prediction web application using ML.
+			We trained the model using both Bag of words and TF IDF.
+			Implemented hyperparameters to achieve maximum accuracy. </p>
+	</div>
+
+
 	<br>
 	<div class='container'>
 		<form action="/" method="POST">
+			<p style=text-align:left;padding-left:1%;margin:0;font-weight:500;>Please Enter your text :</p>
 			<div class="col-three-forth text-center col-md-offset-2">
 				<div class="form-group">
-					<textarea class="form-control jTextarea mt-3" id="jTextarea'" rows="5" name="text"
+					<textarea class="form-control jTextarea " id="jTextarea'" rows="5" name="text"
 						placeholder="Write your text here..." required>{{text}}</textarea>
 
 					<br><br>
@@ -58,6 +71,14 @@
 	{% if result %}
 	<p style="text-align:center"><strong>Prediction : {{result}}</strong></p>
 	{% endif %}
+
+	<footer class="text-center text-lg-start bg-light text-muted" style=" position:absolute;
+	bottom:0;
+	width:100%;">
+		<div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+			© 2021 Copyright: <a class="text-reset" href="https://github.com/super1-1star">Github.com:super1-1star</a>
+		</div>
+	</footer>
 
 
 	<script>
